--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "dexie": "^4.2.1",
     "dexie-react-hooks": "^4.2.0",
     "next": "16.0.0",
